--- a/src/main/webapp/static/credit/css/order_manage/order_filing.css
+++ b/src/main/webapp/static/credit/css/order_manage/order_filing.css
@@ -3,6 +3,13 @@
 
 /*附件*/
 
+.file-upload textarea {
+    width: 74rem;
+    height: 10rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 0.5rem;
+}
 .file-upload {
     border-top: solid 1px #ddd;
     padding-top: 1rem;
