--- a/src/main/webapp/static/credit/css/reset.css
+++ b/src/main/webapp/static/credit/css/reset.css
@@ -192,7 +192,21 @@ label.col-md-4{
     border-radius: 0;
     background: #fafafa;
 }
-
+.bootstrap-table::-webkit-scrollbar {/*滚动条整体样式*/
+    width: 4px;     /*高宽分别对应横竖滚动条的尺寸*/
+    height: 12px;
+}
+.bootstrap-table::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+    margin: 0 2.5rem;
+    border-radius: 5px;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    background: #e5e5e5;
+}
+.bootstrap-table::-webkit-scrollbar-track {/*滚动条里面轨道*/
+    /* box-shadow: inset 0 0 5px rgba(0,0,0,0.2); */
+    border-radius: 0;
+    background: #fafafa;
+}
 .form-check-input {
     margin-top: .1rem;
 }
