--- a/src/main/webapp/template/bbs/home/home.html
+++ b/src/main/webapp/template/bbs/home/home.html
@@ -45,10 +45,17 @@
                         </div>
                         <small  class="psdTip">请输入密码</small>
                     </div>
-                    
+                    <!--验证码-->
+                    <div class="form-group">
+                        <div class="input-group verify">
+                            <input name="password" type="text" class="form-control2" id="veri">
+                            <div id="conVer"></div>
+                        </div>
+                        <small  class="verTip">请输入验证码</small>
+                    </div>
                     <input type="hidden" class="isSuccess" value="${isSuccess!}">
                    	<div class="error-tip" >用户名或密码错误</div>
-            		 
+                    <div class="error-tip2" >验证码错误</div>
                     <div class="form-group">
                        
                             <button type="button" class="btn btn-primary btn-lg btn-login">登录</button>
@@ -68,6 +75,13 @@
     <script src="${BASE_PATH }static/credit/assets/jquery/jquery-2.1.0.js"></script>
     <script src="${BASE_PATH }static/credit/assets/bootstrap-4.1.1-dist/js/bootstrap.min.js"></script>
     <script src="${BASE_PATH }static/credit/js/common.js"></script>
+    <script src="${BASE_PATH }static/credit/js/gVerify.js"></script>
     <script src="${BASE_PATH }static/credit/js/login.js"></script>
+    <script>
+        window.onresize=function () {
+            var verifyCode = new GVerify("conVer");
+
+        }
+    </script>\
 </body>
 </html>
