--- a/src/main/webapp/static/credit/css/passward_change.css
+++ b/src/main/webapp/static/credit/css/passward_change.css
@@ -100,4 +100,16 @@
     font-size: 2rem;
     margin-top: 0.9rem;
 }
+.warning {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background: #f5f5f5;
+}
+.warning span {
+    margin-left: 1rem;
+    color: #fa8c16;
+    font-size: 1.3rem;
+    font-weight: bold;
+}
 
