--- a/src/main/webapp/static/credit/css/reset.css
+++ b/src/main/webapp/static/credit/css/reset.css
@@ -147,7 +147,8 @@ label.col-md-4{
     color: #808080;
     text-decoration: none;
     background-color: #fff;
-    border: 1px solid #e5e5e5;
+    border: 1.5px solid #e5e5e5;
+    border-radius: 4px;
 }
 .pagination>.active>a, .pagination>.active>span, .pagination>.active>a:hover, .pagination>.active>span:hover, .pagination>.active>a:focus, .pagination>.active>span:focus {
     z-index: 2;
@@ -273,7 +274,7 @@ label.col-md-4{
     padding: 0 1.875rem;
 }
 .modal-header .close {
-    padding-top: 1.5rem;
+    /*padding-top: 1.5rem;*/
     margin: 0;
     font-size: 2.5rem;
     font-weight: 400;
