--- a/src/main/webapp/static/credit/css/common.css
+++ b/src/main/webapp/static/credit/css/common.css
@@ -170,7 +170,10 @@ header {
 }
 .breadcrumb {
     margin-bottom: 0;
-    padding: 1rem 0 0 0;
+    /*padding: 1rem 0 0 0;*/
+    overflow: hidden;
+    height: 0;
+    padding: 0;
 }
 .breadcrumb  li a {
     color: var(--fontColor);
