--- a/src/main/webapp/static/credit/css/order_manage/order_detail.css
+++ b/src/main/webapp/static/credit/css/order_manage/order_detail.css
@@ -40,11 +40,6 @@ h3.company_info{
 
 /********* add by ljl 2018-12-03 *********/
 
-/*.disable{
-    pointer-events: none;
-    filter:  grayscale(100%);
-    opacity: .7;
-}*/
 /*基本类型*/
 @media all {
     .module-wrap {
@@ -69,13 +64,13 @@ h3.company_info{
         visibility: hidden;
     }
 
-    .guDongSubTitle, h4 {
-        margin: 2rem 0 0 2rem;
+    h4 {
+        margin: 2rem 0 1rem .5rem;
         font-size: 1.125rem;
         font-weight: bold;
     }
 
-    .guDongSubTitle:nth-of-type(2) {
+    .type11-content h4:nth-of-type(2) {
         margin-bottom: -2rem;
     }
 
@@ -93,9 +88,6 @@ h3.company_info{
         font-weight: bold;
     }
 
-    .multiText {
-        min-height: 3rem;
-    }
 }
 
 /*商业类型*/
