订单管理表格调整

--- a/src/main/webapp/static/credit/css/common.css
+++ b/src/main/webapp/static/credit/css/common.css
@@ -185,7 +185,8 @@ header {
     padding:0.75rem 0 1rem 0;
 }
 .table-content{
-	height: calc(100% - 6.8rem);
+    height: calc(100% - 6.8rem);
+    /*height: calc(100% - 4.7rem);*/
 }
 .search-input {
     width: var(--inputWidthsm)!important;
