--- a/src/main/webapp/static/credit/css/order_manage/create_order.css
+++ b/src/main/webapp/static/credit/css/order_manage/create_order.css
@@ -34,6 +34,7 @@
 	font-size: 1rem;
     font-weight: 600;
     justify-content: flex-end;
+	padding-right: 15px;
 }
 .table-content label span{
 	color:#f00;
