--- a/src/main/webapp/static/credit/css/order_manage/order_detail.css
+++ b/src/main/webapp/static/credit/css/order_manage/order_detail.css
@@ -142,11 +142,15 @@ h3.company_info{
         color: var(--fontTitleColor);
     }
 
+    .type23-content [for=grade] {
+        font-size: 1.25rem;
+    }
     .type23-content #grade {
-        display: inline;
+        margin-top: .5rem;
+        margin-left: 1rem;
         width: 3rem;
         text-align: right;
-        font-size: 1.5rem;
+        font-size: 1.75rem;
         font-weight: bold;
         color: var(--activeColor);
     }
