--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -1,3 +1,9 @@
+.lab{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2rem;
+}
 .lab > div:nth-of-type(1),
 .lab > div > div > div {
     /*outline: 1px dotted rgba(255, 165, 0, 0.44);*/
@@ -7,41 +13,44 @@
 /*主页面布局*/
 @media all {
     #content > .lab {
-        flex: 4;
-        flex-direction: column;
+        /*flex: 4;*/
         display: flex;
+        flex-direction: column;
+        height: 100%;
+        overflow: hidden;
     }
 
     .lab_head {
-        flex: 1;
+        flex: 0 0 11.11%;
     }
 
     .lab_content {
-        flex: 8;
+        flex: 0 0 88.88%;
         display: flex;
-        padding: 1.2em 1.5em 1.2em 2.4em;
+        justify-content:space-around;
+        padding: 1.2em 1.5em 0 2.4em;
     }
 
     .lab_content_l {
-        flex: .7;
+        flex: 0 0 19%;
     }
 
     .lab_content_r {
-        flex: 3;
+        flex: 0 0 77%;
         display: flex;
         flex-direction: column;
         margin-top: -1em;
-        margin-left: 2em;
-        margin-right: 1.5em;
+        /*margin-left: 2em;*/
+        /*margin-right: 1.5em;*/
         /*text-align: right;*/
     }
 
     .lab_content_r > .labSubNav {
-        flex: 1;
+        flex: 0 0 9.1%;
     }
 
     .lab_content_r > .switchBox {
-        flex: 10;
+        flex: 0 0 87.9%;
     }
 }
 
@@ -244,13 +253,13 @@ li:not(.hasChildren).active {
     }
 
     .labSubNav > ul {
-        margin-left: 8em;
+        margin-left: 7.75em;
     }
 
     .labSubNav > ul > li {
         display: inline-block;
+        width: 9.875em;
         text-align: center;
-        width: 10em;
         padding: .75em 0;
         font-size: 1.6em;
         color: #fff;
