--- a/src/main/webapp/static/credit/css/common.css
+++ b/src/main/webapp/static/credit/css/common.css
@@ -182,7 +182,7 @@ header {
 .main-title {
     font-size: 1.625rem;
     font-weight: 600;
-    padding:1.75rem 0 1rem 0;
+    padding:1rem 0 1rem 0;
 }
 .table-content{
     height: calc(100% - 6.8rem);
@@ -364,7 +364,7 @@ label {
     background: #fff;
     left: 16.6667%;
     padding-left: 2.5rem!important;
-    border-top: solid 1px #e5e5e5;
+   /*  border-top: solid 1px #e5e5e5; */
     box-shadow: 0px 2px 2px #e5e5e5;
 }
 
