表格增加序号，bug修复

--- a/src/main/webapp/static/credit/css/report_css/reported_basic_info.css
+++ b/src/main/webapp/static/credit/css/report_css/reported_basic_info.css
@@ -2,6 +2,7 @@
 .bootstrap-table .table:not(.table-condensed), .bootstrap-table .table:not(.table-condensed) > tbody > tr > th, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > th, .bootstrap-table .table:not(.table-condensed) > thead > tr > td, .bootstrap-table .table:not(.table-condensed) > tbody > tr > td, .bootstrap-table .table:not(.table-condensed) > tfoot > tr > td {
 	white-space:normal;
 	word-break:break-all;
+/* 	min-width:8rem; */
 }
 
 
